<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="102"
        android:title="@string/action_about"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="103"
        android:title="@string/action_update"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_welcome"
        android:orderInCategory="104"
        android:title="@string/action_welcome"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="105"
        android:title="@string/action_share"
        android:visible="false"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="106"
        android:title="@string/action_exit"
        android:visible="false"
        app:showAsAction="never"/>
</menu>
