<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/bg_sharp_10"
    android:orientation="vertical">
    <TextView
        android:id="@+id/result_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="20dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/reg_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/reg"
        android:visibility="gone"/>
    <Button
        android:id="@+id/goto_send_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/goto_send"
        android:visibility="gone"/>
    <Button
        android:id="@+id/launch_wx_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/launch_wx"
        android:visibility="gone"/>
    <Button
        android:id="@+id/check_timeline_supported_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/check_timeline_supported"
        android:visibility="gone"/>
    <Button
        android:id="@+id/scan_qrcode_login_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/scan_qrcode_login"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_warning"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_gravity="bottom"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5.0dp"
            android:layout_marginRight="5.0dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>