<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2018.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="合伙人总收益："
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_profit_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_profit_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/layout_agent_share"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_wallet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/func_agent_share"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_right_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/layout_agent_fans"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_user_data"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/func_agent_fans"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_right_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/layout_agent_makers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_user_data"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/func_agent_makers"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_right_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/layout_agent_agents"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_user_data"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/func_agent_agents"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_right_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/layout_agent_fans_profit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_redpack_logs"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/func_agent_fans_profit"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_right_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/layout_agent_agent_profit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_redpack_logs"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/func_agent_agent_profit"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_right_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_h"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:background="@color/line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="收益明细"
        android:textColor="@color/red"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red"/>
</LinearLayout>
