<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2018.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_section_normal"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_choujiang_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_brand_bg_head"/>
        <FrameLayout
            android:id="@+id/view_choujiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <ImageView
                android:id="@+id/iv_choujiang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_brand_bg"/>
            <ImageView
                android:id="@+id/iv_choujiang2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="matrix"
                android:src="@drawable/ic_brand_point"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/func_account"
                android:textColor="@color/white"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/tv_rule"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/func_brand_rule"
                android:textColor="@color/white"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/tv_redpack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/func_view_wallet"
                android:textColor="@color/white"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/app_list_bg"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@color/line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="抽中免费看"
                android:textSize="16sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@color/line"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <ListView
            android:id="@+id/lvBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="#00000000"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:scrollbars="none"/>
    </LinearLayout>
</LinearLayout>
